kube/backend-deploy.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: app-backend


spec:
  replicas: 1

  selector:
    matchLabels:
      app: backend

  template:
    metadata:
      labels:
        app: backend

    spec:
      containers:
        - name: backend
          image: docker.io/achalpadol/k8s-ingress:app3-backend-v1

          ports:
            - containerPort: 8080

          volumeMounts:
            - name: db-password
              mountPath: /run/secrets/db-password
              subPath: db-password
              readOnly: true

      volumes:
        - name: db-password
          secret:
            secretName: db-secret
            items:
              - key: MYSQL_ROOT_PASSWORD
                path: db-password
