kube/db-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
        - name: db
          image: docker.io/achalpadol/react-rust-post-db:v2

          ports:
            - containerPort: 3306

          volumeMounts:
            - name: db-data
              mountPath: /var/lib/mysql

      volumes:
        - name: db-data
          persistentVolumeClaim:
            claimName: db-data
