kube/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend

spec:
  selector:
    app: frontend

  ports:
    - protocol: TCP
      port: 3000
      targetPort: 80
