kube/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: app-ingress

  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    haproxy.org/path-rewrite: |
      ^/api$ /

spec:
  ingressClassName: alb

  rules:
    - host: app3.achal.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
